syntax = "proto3";

import "google/protobuf/empty.proto";

package marketer;

message Marketer {
    string id = 1;
    string email = 2;
    string name = 3;
}

message MarketerRequest {
    int32 id  = 1;
}

service Marketers {
    rpc GetMarketer(MarketerRequest) returns (Marketer) {};
    rpc GetMarketers(google.protobuf.Empty) returns (stream Marketer) {};
}






